--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.14.7",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
